// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQAZ_LJt6L9H0cLphtBK9ddkaP8jMiAQ4zOzuMSk-LhFO2dY"`;

exports[`feature-random should implement random correctly 2`] = `"kQAB5UJXZMwV5epy18pUvfHzA4pa7qMTQI9hRtcTa55-SNkU"`;

exports[`feature-random should implement random correctly 3`] = `"kQBfy-wIuRKKbCp6bdrG4kK8UW1UxMmmFKm9Z4sko698Vir8"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQAZ_LJt6L9H0cLphtBK9ddkaP8jMiAQ4zOzuMSk-LhFO2dY",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 16393n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAZ_LJt6L9H0cLphtBK9ddkaP8jMiAQ4zOzuMSk-LhFO2dY",
            "to": "kQAB5UJXZMwV5epy18pUvfHzA4pa7qMTQI9hRtcTa55-SNkU",
            "type": "internal",
            "value": 9971431000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAZ_LJt6L9H0cLphtBK9ddkaP8jMiAQ4zOzuMSk-LhFO2dY",
          "to": "kQAB5UJXZMwV5epy18pUvfHzA4pa7qMTQI9hRtcTa55-SNkU",
          "type": "internal",
          "value": 9971431000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14221n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAB5UJXZMwV5epy18pUvfHzA4pa7qMTQI9hRtcTa55-SNkU",
            "to": "kQBfy-wIuRKKbCp6bdrG4kK8UW1UxMmmFKm9Z4sko698Vir8",
            "type": "internal",
            "value": 9948613000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAB5UJXZMwV5epy18pUvfHzA4pa7qMTQI9hRtcTa55-SNkU",
          "to": "kQBfy-wIuRKKbCp6bdrG4kK8UW1UxMmmFKm9Z4sko698Vir8",
          "type": "internal",
          "value": 9948613000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14157n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBfy-wIuRKKbCp6bdrG4kK8UW1UxMmmFKm9Z4sko698Vir8",
            "to": "kQBfy-wIuRKKbCp6bdrG4kK8UW1UxMmmFKm9Z4sko698Vir8",
            "type": "internal",
            "value": 9925851000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBfy-wIuRKKbCp6bdrG4kK8UW1UxMmmFKm9Z4sko698Vir8",
          "to": "kQBfy-wIuRKKbCp6bdrG4kK8UW1UxMmmFKm9Z4sko698Vir8",
          "type": "internal",
          "value": 9925851000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3201n,
      },
    ],
  },
]
`;
